--- a/src/components/AwakeDashboard.css
+++ b/src/components/AwakeDashboard.css
@@ -2186,6 +2186,12 @@
 .avatar-creator-modal .modal-header {
   padding: 20px;
   border-bottom: 1px solid #e0e0e0;
+  background: white;
+}
+
+.avatar-creator-modal .modal-header h2 {
+  color: #333;
+  margin: 0;
 }
 
 .avatar-creator-iframe {
